# UI_Autotest_Playwright

./: config.json  conftest.py  pyproject.toml  pytest.ini
locators/calculator/: home_insurance_locators.py
locators/osago/: insuranse_osago_locators.py
locators/travel/: insurance_schengen_locators.py
pages/calculator/: base_page.py  home_insurance.py
pages/osago/: base_page.py  osago_insurense.py
pages/travel/: base_page.py  shengen_insurence.py
test_data/: address.py  contact.py  document.py  insurer.py  vehicle.py
tests/calculator/: test_home_insurance.py
tests/my_conftest/: test_osago.py
tests/osago/: test_osago.py
tests/travel/: test_shengen_insurance.py
